<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductListActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="168dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/nameOfProduct"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="168dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/price"
        android:layout_width="168dp"
        android:layout_height="46dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="19dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv1"
        android:layout_width="377dp"
        android:layout_height="292dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="168dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="2dp"
        android:text="@string/czy_kupiony"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="28dp"
        android:text="@string/addProductToList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="24dp"
        android:text="@string/deleteAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Button
        android:id="@+id/buttonDeleteSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/usu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv1" />

</androidx.constraintlayout.widget.ConstraintLayout>