<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Opcje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/theme"
        android:layout_width="185dp"
        android:layout_height="28dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="153dp"
        android:text="@string/tryb_ciemny"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/colorSwitch"
        android:layout_width="184dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/kolor_zielony"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme" />

</androidx.constraintlayout.widget.ConstraintLayout>